--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@umbrik/webtutor-types",
-  "version": "9.8.1",
+  "name": "@wshcmx/types",
+  "version": "10.0.0",
   "directories": {
     "lib": "lib"
   },
@@ -37,7 +37,7 @@
     "eslint-plugin-jsdoc": "^46.4.5",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
     "semver": "^7.6.2",
-    "typescript": "4.4.4",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^7.13.0"
   }
 }
