--- a/examples/ts/tsconfig.json
+++ b/examples/ts/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "compilerOptions": {
     "target": "es5",
@@ -11,8 +10,8 @@
     "baseUrl": "src",
     "noLib": true,
     "typeRoots": [
-      "node_modules/@umbrik/webtutor-types/lib",
-      "node_modules/@umbrik/webtutor-types/lib/xml"
+      "../../lib",
+      "../../lib/xml"
     ]
   }
 }
