--- a/examples/js/tsconfig.json
+++ b/examples/js/tsconfig.json
@@ -6,12 +6,13 @@
     "strict": false,
     "noImplicitAny": true,
     "allowJs": true,
+    "checkJs": true,
     "moduleResolution": "node",
     "baseUrl": "src",
     "noLib": true,
     "typeRoots": [
-      "node_modules/@umbrik/webtutor-types/lib",
-      "node_modules/@umbrik/webtutor-types/lib/xml"
+      "../../lib",
+      "../../lib/xml"
     ]
   }
 }
