--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -26,7 +26,7 @@
     "jsdoc/check-property-names": "error",
     "jsdoc/check-types": "error",
     "jsdoc/no-blank-block-descriptions": "error",
-    "jsdoc/no-multi-asterisks": "error",
+    "jsdoc/no-multi-asterisks": ["error", { "allowWhitespace": true }],
     "jsdoc/require-asterisk-prefix": "error",
     "jsdoc/require-description": "error",
     "jsdoc/require-hyphen-before-param-description": "error",
