Update readme and tsconfig.json files

--- a/examples/js/tsconfig.json
+++ b/examples/js/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "es6",
+    "target": "ES5",
+    "module": "Preserve",
     "esModuleInterop": true,
     "strict": false,
     "noImplicitAny": true,
