--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
+    "target": "ES5",
+    "module": "Preserve",
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
