--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -6,7 +6,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "project": "./tsconfig.json",
+    "project": "tsconfig.json",
     "tsconfigRootDir": "lib"
   },
   "plugins": [
