Remove semver as dev dependency

--- a/.github/workflows/pr.check.yml
+++ b/.github/workflows/pr.check.yml
@@ -19,4 +19,7 @@ jobs:
       - name: Install
         run: npm ci
       - name: Check version
-        run: npm run version:check
+        run: |
+          localVersion=$(cat package.json | jq -r '.version')
+          masterVersion=$(git show origin/main:package.json | jq -r '.version')
+          [ "${localVersion}" = "`echo -e "${localVersion}\n${masterVersion}" | sort -V | head -n1`" ] && echo 'Package version should be upgraded' && exit 1 || exit 0
