--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "eslint -c ./lib/.eslintrc.json lib",
     "tsc:lib": "tsc -p lib/tsconfig.json",
     "tsc:tests": "tsc -p tests/tsconfig.json",
-    "check": "npm run lint && npm run tsc:lib && npm run tsc:tests",
-    "version:check": "node ci/version-check.js"
+    "check": "npm run lint && npm run tsc:lib && npm run tsc:tests"
   },
   "repository": {
     "type": "git",
@@ -37,7 +36,6 @@
     "eslint": "^8.17.0",
     "eslint-plugin-jsdoc": "^46.4.5",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "semver": "^7.6.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.24.1"
   }
