--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wshcmx/types",
-  "version": "11.0.0-beta12",
+  "version": "11.0.0-beta13",
   "directories": {
     "lib": "lib"
   },
@@ -23,19 +23,16 @@
     "wxhcmx-types",
     "wt"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "umbrik",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wshcmx/types/issues"
   },
   "homepage": "https://github.com/wshcmx/types#readme",
   "devDependencies": {
-    "@types/node": "^20.4.5",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^8.17.0",
     "eslint-plugin-jsdoc": "^46.4.5",
-    "eslint-plugin-no-for-of-loops": "^1.0.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.24.1"
   }
