--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,6 +10,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Check version
+        run: |
+          localVersion=$(cat package.json | jq -r '.version')
+          masterVersion=$(git show origin/main:package.json | jq -r '.version')
+          [ "${localVersion}" = "`echo -e "${localVersion}\n${masterVersion}" | sort -V | head -n1`" ] && echo 'Package version should be upgraded' && exit 1 || exit 0
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -18,11 +24,5 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Lint
-        run: npm run lint
-
-      - name: Compiling lib folder
-        run: npm run tsc:lib
-
-      - name: Compiling tests folder
-        run: npm run tsc:tests
+      - name: Check
+        run: npm run check
