--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@wshcmx/types",
-  "version": "11.0.0-beta12",
+  "version": "11.0.0-beta13",
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "lint": "eslint -c ./lib/.eslintrc.json lib",
+    "check": "npm run lint:lib && npm run lint:tests && npm run tsc:lib && npm run tsc:tests",
+    "lint:lib": "eslint -c ./lib/eslint.config.js lib",
+    "lint:tests": "eslint -c ./tests/eslint.config.js tests",
     "tsc:lib": "tsc -p lib/tsconfig.json",
-    "tsc:tests": "tsc -p tests/tsconfig.json",
-    "check": "npm run lint && npm run tsc:lib && npm run tsc:tests"
+    "tsc:tests": "tsc -p tests/tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -23,20 +25,16 @@
     "wxhcmx-types",
     "wt"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "umbrik",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wshcmx/types/issues"
   },
   "homepage": "https://github.com/wshcmx/types#readme",
   "devDependencies": {
-    "@types/node": "^20.4.5",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "eslint": "^8.17.0",
-    "eslint-plugin-jsdoc": "^46.4.5",
-    "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.24.1"
+    "eslint": "^9.22.0",
+    "eslint-plugin-jsdoc": "^50.6.6",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
