--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Check version
         run: |
@@ -24,7 +26,10 @@ jobs:
           node-version: 20
 
       - name: Install
-        run: npm ci
+        run: npm install
+
+      - name: Check for changes after npm i
+        run: "[[ `git status --porcelain` ]] && exit 1 || exit 0"
 
       - name: Check
         run: npm run check
