--- a/.github/workflows/main.check.yml
+++ b/.github/workflows/main.check.yml
@@ -7,4 +7,18 @@ on:
 
 jobs:
   Check:
-    uses: ./.github/workflows/check.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install
+        run: npm ci
+
+      - name: Check
+        run: npm run check
