--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,10 +15,7 @@ jobs:
           fetch-depth: 0
 
       - name: Check version
-        run: |
-          localVersion=$(cat package.json | jq -r '.version')
-          masterVersion=$(git show origin/main:package.json | jq -r '.version')
-          [ "${localVersion}" = "`echo -e "${localVersion}\n${masterVersion}" | sort -V | head -n1`" ] && echo 'Package version should be upgraded' && exit 1 || exit 0
+        run: ./scripts/check-version.sh
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
