--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wshcmx/types",
-  "version": "11.0.0-beta19",
+  "version": "11.0.0-beta20",
   "type": "module",
   "directories": {
     "lib": "lib"
@@ -10,7 +10,8 @@
     "lint:lib": "eslint -c ./lib/eslint.config.js lib",
     "lint:tests": "eslint -c ./tests/eslint.config.js tests",
     "tsc:lib": "tsc -p lib/tsconfig.json",
-    "tsc:tests": "tsc -p tests/tsconfig.json"
+    "tsc:tests": "tsc -p tests/tsconfig.json",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "eslint": "^9.22.0",
     "eslint-plugin-jsdoc": "^50.6.6",
+    "husky": "^9.1.7",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   }
