--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wshcmx/types",
-  "version": "11.0.0-beta22",
+  "version": "11.0.0-rc.1",
   "type": "module",
   "directories": {
     "lib": "lib"
