--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,16 +6,21 @@ on:
       - main
 
 jobs:
-  Check:
+  check-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Check package version
+        shell: bash
+        run: ./.github/scripts/check-version.sh
+
+  check-common:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Check version
-        run: ./scripts/check-version.sh
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
